--- a/RecipEase/app/src/main/res/menu/drawer_view.xml
+++ b/RecipEase/app/src/main/res/menu/drawer_view.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <group android:checkableBehavior="single">
+
         <item
             android:id="@+id/profile"
-            android:icon="@drawable/logo"
+            android:icon="@drawable/ic_004_avatar"
             android:title="profile" />
         <item
+            android:id="@+id/home"
+            android:icon="@drawable/pot"
+            android:title="home" />
+        <item
             android:id="@+id/create_recipe"
-            android:icon="@drawable/meat_icon_background"
+            android:icon="@drawable/ic_002_chef"
             android:title="create a recipe" />
         <item
+            android:id="@+id/find_recipe"
+            android:icon="@drawable/ic_001_tray"
+            android:title="find recipes" />
+        <item
             android:id="@+id/about"
-            android:icon="@drawable/pot"
+            android:icon="@drawable/logo"
             android:title="about" />
         <item
             android:id="@+id/logout"
-            android:icon="@drawable/logo"
+            android:icon="@drawable/ic_003_exit"
             android:title="logout" />
-    </group>
+
 </menu>
