--- a/RecipEase/app/src/main/res/layout/activity_drawer.xml
+++ b/RecipEase/app/src/main/res/layout/activity_drawer.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_drawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.recipease.project.DrawerActivity">
 
-    <FrameLayout
-        android:id="@+id/content_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <android.support.design.widget.NavigationView
+            app:headerLayout="@layout/nav_header"
+            android:id="@+id/nav_view"
+            android:layout_height="match_parent"
+            android:layout_width="200dp"
+            android:layout_gravity="left|start"
+            android:divider="#08f"
+            android:dividerHeight="20.sp"
+            android:background="@color/colorWhite"
+            app:itemTextColor="@color/colorPrimary"
+            app:itemIconTint="@color/colorAccent"
+            app:menu="@menu/drawer_view"
+           >
 
-    </FrameLayout>
-
-    <!-- The navigation drawer -->
-    <ListView
-        android:id="@+id/left_drawer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:scrollingCache="false"
-        android:background="@drawable/drawer_bg"
-        android:divider="@null"
-        android:choiceMode="singleChoice"/>
+    </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
