--- a/RecipEase/app/src/main/res/layout/nav_header.xml
+++ b/RecipEase/app/src/main/res/layout/nav_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="192dp"
-    android:background="?attr/colorPrimaryDark"
+    android:background="?attr/colorAccent"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:orientation="vertical"
@@ -12,6 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="RECIPEASE"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+    <ImageView
+        android:src="@drawable/pot"
+        android:layout_width="75dp"
+        android:layout_height="75dp" />
 
 </LinearLayout>
