Tied new navbar into personal recipes
New navbar works with personal recipes and new create recipes with ingredients

--- a/RecipEase/app/src/main/res/menu/drawer_view.xml
+++ b/RecipEase/app/src/main/res/menu/drawer_view.xml
@@ -14,6 +14,10 @@
             android:icon="@drawable/ic_002_chef"
             android:title="create a recipe" />
         <item
+            android:id="@+id/personal_recipes"
+            android:icon="@drawable/ic_002_chef"
+            android:title="personal recipes" />
+        <item
             android:id="@+id/find_recipe"
             android:icon="@drawable/ic_001_tray"
             android:title="find recipes" />
