--- a/RecipEase/app/src/main/res/layout/activity_ingredient_selector.xml
+++ b/RecipEase/app/src/main/res/layout/activity_ingredient_selector.xml
@@ -67,22 +67,21 @@
 
         </RelativeLayout>
 
-
-
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:text="Recipes!"
-            android:layout_gravity="center_horizontal"
+            android:background="@drawable/round_shape_btn"
             android:onClick="sendRecipes"
-            android:id="@+id/sendbutton"/>
-
-
-
-
-
-
+            android:id="@+id/sendbutton"
+            android:layout_gravity="center_horizontal"
+            android:padding="10sp"
+            android:text="Recipes!"
+            android:textColor="#08f"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     </LinearLayout>
 </ScrollView>
