--- a/RecipEase/app/src/main/res/layout/content_create_recipe.xml
+++ b/RecipEase/app/src/main/res/layout/content_create_recipe.xml
@@ -311,7 +311,7 @@
             app:layout_constraintVertical_bias="1.0" />
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/btCreateIngredient"
             android:layout_width="50sp"
             android:layout_height="50sp"
             android:paddingLeft="10sp"
@@ -322,7 +322,8 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView9"
-            app:srcCompat="@android:drawable/btn_plus" />
+            app:srcCompat="@drawable/ic_add"
+            android:onClick="createIngredient"/>
 
         <TextView
             android:id="@+id/textView15"
