--- a/RecipEase/app/src/main/res/layout/item_recipe.xml
+++ b/RecipEase/app/src/main/res/layout/item_recipe.xml
@@ -18,6 +18,13 @@
             android:id="@+id/recipeImage"
             android:adjustViewBounds="true"/>
 
+        <ImageView
+            android:id="@+id/ivTransparency"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignBottom="@id/recipeImage"
+            android:background="#aa000000" />
+
         <TextView
             android:id="@+id/title"
             style="@style/TextAppearance.AppCompat.Headline"
@@ -25,8 +32,9 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/recipeImage"
             android:padding="8dp"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
