--- a/RecipEase/app/src/main/res/values/styles.xml
+++ b/RecipEase/app/src/main/res/values/styles.xml
@@ -10,8 +10,8 @@
 
     </style>
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
+    <style name="AppTheme.ActionBarNoTitle">
+        <item name="windowActionBar">true</item>
         <item name="windowNoTitle">true</item>
     </style>
 
