--- a/RecipEase/app/src/main/res/layout/activity_recipe_list.xml
+++ b/RecipEase/app/src/main/res/layout/activity_recipe_list.xml
@@ -46,7 +46,8 @@
                 android:textColor="#08f"
                 android:textSize="15dp"
                 android:layout_marginTop="140dp"
-                android:layout_marginLeft="20dp"/>
+                android:layout_marginLeft="20dp"
+                android:onClick="goBackToIngredientSelector" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -59,15 +60,17 @@
                 android:layout_marginTop="140dp"
                 android:textColor="#08f" />
 
-            <ImageView
-                android:layout_width="317dp"
-                android:layout_height="93dp"
-                android:id="@+id/logo"
-                android:src="@drawable/logo"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp" />
+            <TextView
+                android:id="@+id/logoText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
+                android:text="@string/textLogo"
+                android:textColor="@color/colorAccent"
+                android:textSize="72sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </RelativeLayout>
 
