--- a/RecipEase/app/src/main/res/layout/content_home.xml
+++ b/RecipEase/app/src/main/res/layout/content_home.xml
@@ -36,16 +36,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/logoText"
         app:srcCompat="@drawable/pot" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="281dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="60dp"
+    <TextView
+        android:id="@+id/logoText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/textLogo"
+        android:textColor="@color/colorAccent"
+        android:textSize="72sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
