--- a/RecipEase/app/src/main/res/layout/content_register.xml
+++ b/RecipEase/app/src/main/res/layout/content_register.xml
@@ -11,17 +11,17 @@
     tools:showIn="@layout/activity_register">
 
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="247dp"
-        android:layout_height="58dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
+    <TextView
+        android:id="@+id/logoText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/textLogo"
+        android:textColor="@color/colorAccent"
+        android:textSize="72sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageView
@@ -33,7 +33,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/logoText"
         app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"
         android:onClick="selectProfilePicture" />
 
