Navbar has a menu button; screen titles; you can now scroll on recipe details page
Navbar has a hamburger menu icon in the toolbar to open the menu (helps user know menu exists). Menu has custom font for logo. Every screen has a properly named name in the toolbar at the top. You can scroll down in recipe details activity now

--- a/RecipEase/app/src/main/res/layout/activity_recipe_list.xml
+++ b/RecipEase/app/src/main/res/layout/activity_recipe_list.xml
@@ -7,20 +7,6 @@
     tools:context="com.recipease.project.BrowseRecipesActivity"
     android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="220dp"
@@ -47,8 +33,7 @@
                 android:textSize="15dp"
                 android:onClick="onEditSearch"
                 android:layout_marginTop="140dp"
-                android:layout_marginLeft="20dp"
-                android:onClick="goBackToIngredientSelector" />
+                android:layout_marginLeft="20dp" />
 
             <TextView
                 android:layout_width="wrap_content"
