--- a/RecipEase/app/src/main/res/layout/nav_header.xml
+++ b/RecipEase/app/src/main/res/layout/nav_header.xml
@@ -11,7 +11,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="RECIPEASE"
+        android:id="@+id/logoText"
+        android:text="@string/textLogo"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
