--- a/RecipEase/app/src/main/res/layout/activity_recipe_details.xml
+++ b/RecipEase/app/src/main/res/layout/activity_recipe_details.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.recipease.project.RecipeDetailsActivity">
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.recipease.project.RecipeDetailsActivity">
 
     <ImageView
         android:id="@+id/ivImageURL"
@@ -103,6 +107,7 @@
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/staticInstructions"
         tools:layout_editor_absoluteX="0dp" />
+    </RelativeLayout>
+</ScrollView>
 
 
-</RelativeLayout>
