New menu icons, browse recipes no longer freezes while loading, ingredient selector is instantly available
New menu icons for the home page (pot icon) and create recipe (pencil icon). Browse recipes and ingredient selector had their database functionality moved around to have them update as they load rather than only once it's all loaded

--- a/RecipEase/app/src/main/res/menu/drawer_view.xml
+++ b/RecipEase/app/src/main/res/menu/drawer_view.xml
@@ -7,11 +7,11 @@
             android:title="profile" />
         <item
             android:id="@+id/home"
-            android:icon="@drawable/pot"
+            android:icon="@drawable/pot_outlined_menu"
             android:title="home" />
         <item
             android:id="@+id/create_recipe"
-            android:icon="@drawable/ic_002_chef"
+            android:icon="@drawable/pencil"
             android:title="create a recipe" />
         <item
             android:id="@+id/personal_recipes"
