--- a/RecipEase/app/src/main/res/menu/drawer_view.xml
+++ b/RecipEase/app/src/main/res/menu/drawer_view.xml
@@ -23,7 +23,7 @@
             android:title="find recipes" />
         <item
             android:id="@+id/about"
-            android:icon="@drawable/logo"
+            android:icon="@drawable/ic_information"
             android:title="about" />
         <item
             android:id="@+id/logout"
