--- a/RecipEase/app/src/main/res/layout/item_recipe.xml
+++ b/RecipEase/app/src/main/res/layout/item_recipe.xml
@@ -13,10 +13,11 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/recipeImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/recipeImage"
-            android:adjustViewBounds="true"/>
+            android:adjustViewBounds="true"
+            android:cropToPadding="false" />
 
         <ImageView
             android:id="@+id/ivTransparency"
