Create recipe ingredient fixes
Newly created ingredients should now instantly show up in the container (with a trash can next to it). They now only get uploaded into the database when the user actually hits "Upload Recipe". This kills two birds with one stone, the lag of new ingredients freezing the UI, and the problem of useless user-created ingredients being in the database if the user cancels the recipe creation.

Ingredient container also resizes as needed now to allow scrolling.

Bonus: Personal Recipes optimized to load waaaay faster.

--- a/RecipEase/app/src/main/res/layout/content_create_recipe.xml
+++ b/RecipEase/app/src/main/res/layout/content_create_recipe.xml
@@ -59,6 +59,7 @@
             android:layout_height="59dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="68dp"
             android:ems="10"
             android:hint="Enter Cooking Instruction"
             android:inputType="textPersonName"
@@ -124,6 +125,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
 
+            android:layout_marginTop="56dp"
             android:background="@drawable/round_shape_btn"
             android:onClick="addInstructionToRecipe"
             android:padding="10sp"
@@ -207,7 +209,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/createIngredientRecyclerView"
             android:layout_width="350dp"
-            android:layout_height="140dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginTop="24dp"
