Entering instructions now behaves like entering ingredients
They share GUI designs now.

Bonus: Ingredient and Instruction adapters now refresh using NotifyItemInserted - even has a cool fade in animation for newly added ingredients.

Bonus bonus: Resized the autocomplete popup text to make it larger, and much easier to tap

--- a/RecipEase/app/src/main/res/layout/content_create_recipe.xml
+++ b/RecipEase/app/src/main/res/layout/content_create_recipe.xml
@@ -53,20 +53,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivRecipePicture" />
 
-        <EditText
-            android:id="@+id/etInstruction"
-            android:layout_width="338dp"
-            android:layout_height="59dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="68dp"
-            android:ems="10"
-            android:hint="Enter Cooking Instruction"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createIngredientRecyclerView" />
-
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/relativeLayout2"
@@ -118,24 +104,6 @@
 
         </RelativeLayout>
 
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-
-            android:layout_marginTop="56dp"
-            android:background="@drawable/round_shape_btn"
-            android:onClick="addInstructionToRecipe"
-            android:padding="10sp"
-            android:text="Tap to Add Instruction"
-            android:textColor="#08f"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.502"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etInstruction" />
-
         <TextView
             android:id="@+id/tvInstructions"
             android:layout_width="wrap_content"
@@ -147,7 +115,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button3" />
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />
 
 
         <Button
@@ -170,13 +138,13 @@
             android:layout_height="50sp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="168dp"
             android:onClick="createIngredient"
             android:paddingLeft="10sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.974"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9"
+            app:layout_constraintTop_toBottomOf="@+id/ivRecipePicture"
             app:srcCompat="@drawable/ic_add" />
 
         <TextView
@@ -191,6 +159,65 @@
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/relativeLayout2" />
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/relativeLayout3"
+            android:layout_width="match_parent"
+            android:layout_height="82dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="19dp"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createIngredientRecyclerView"
+            tools:context="com.recipease.project.CreateRecipeActivity">
+
+            <com.miguelcatalan.materialsearchview.MaterialSearchView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:textColor="#FFF"
+                android:textColorHint="#FFF"
+                app:searchBackIcon="@drawable/ic_action_navigation_arrow_back_inverted"
+                app:searchBackground="@color/colorPrimary"
+                app:searchCloseIcon="@drawable/ic_action_navigation_close_inverted"
+                app:searchSuggestionBackground="@color/colorPrimary"
+                app:searchSuggestionIcon="@drawable/ic_suggestion">
+
+                <EditText
+                    android:id="@+id/etInstruction"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:ems="10"
+                    android:hint="Enter Cooking Instruction"
+                    android:inputType="textPersonName" />
+
+
+            </com.miguelcatalan.materialsearchview.MaterialSearchView>
+
+        </RelativeLayout>
+
+        <ImageButton
+            android:id="@+id/btCreateInstruction"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:onClick="createInstruction"
+            android:paddingLeft="10sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.974"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/relativeLayout3"
+            app:srcCompat="@drawable/ic_add" />
 
         <EditText
             android:id="@+id/etName"
@@ -216,6 +243,19 @@
             android:clickable="true"
             android:scrollbars="vertical"
             app:layout_constraintTop_toTopOf="@+id/textView15"
+            tools:layout_editor_absoluteX="17dp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/createInstructionRecyclerView"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="80dp"
+            android:clickable="true"
+            android:onClick="createInstruction"
+            android:scrollbars="vertical"
+            app:layout_constraintTop_toTopOf="@+id/relativeLayout3"
             tools:layout_editor_absoluteX="17dp" />
 
     </android.support.constraint.ConstraintLayout>
