--- a/RecipEase/app/src/main/res/layout/item_ingredient.xml
+++ b/RecipEase/app/src/main/res/layout/item_ingredient.xml
@@ -1,13 +1,12 @@
-
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/lbl_name"
-    android:layout_width="wrap_content"
+    android:layout_width="350dp"
     android:layout_height="80dp"
     android:layout_marginLeft="20dp"
-    android:gravity="center_vertical|center_horizontal"
-    android:text="temp"
-    android:textColor="@color/colorPrimaryDark"
-    android:textSize="16sp"
     android:clickable="true"
-    android:onClick="addItem"/>
+    android:gravity="center_vertical|center_horizontal"
+    android:onClick="addItem"
+    android:text="temp"
+    android:textAlignment="textStart"
+    android:textColor="@color/colorPrimaryDark"
+    android:textSize="18sp" />
