--- a/RecipEase/app/src/main/res/layout/activity_recipe_details.xml
+++ b/RecipEase/app/src/main/res/layout/activity_recipe_details.xml
@@ -35,34 +35,12 @@
         android:textColor="#FFFFFF"
         android:textSize="30sp" />
 
-    <TextView
-        android:id="@+id/tvCookTime"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/tvTitle"
-        android:layout_marginEnd="13dp"
-        android:text="Cook Time"
-        android:textAlignment="textEnd"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/tvMinutes"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_alignBottom="@+id/tvCookTime"
-        android:layout_alignEnd="@+id/tvCookTime"
-        android:text="minutes"
-        android:textAlignment="textEnd"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/favoriteButton"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_below="@id/tvCookTime"
+        android:layout_below="@id/tvTitle"
         android:adjustViewBounds="false"
         android:onClick="onClickFavorites"
         android:src="@drawable/new_heart" />
@@ -70,7 +48,7 @@
     <TextView
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_below="@id/tvCookTime"
+        android:layout_below="@id/tvTitle"
         android:layout_toRightOf="@id/favoriteButton"
         android:id="@+id/tvNumFavorites"
         android:textSize= "30dp"
@@ -80,13 +58,13 @@
 
     <TextView
         android:id="@+id/staticIngredients"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/staticInstructions"
         android:layout_below="@+id/favoriteButton"
         android:text="Ingredients"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
+        android:paddingLeft="10dp"
         app:layout_constraintTop_toBottomOf="@+id/ivImageURL"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -97,6 +75,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tvCookingIngredients"
         android:layout_marginTop="11dp"
+        android:paddingLeft="10dp"
         android:text="Instructions"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
@@ -110,7 +89,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/staticIngredients"
         android:layout_marginTop="16dp"
-        android:text="@string/cookingIngredients"
+        android:layout_marginLeft="10dp"
         android:textColor="@color/colorAccent"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/staticIngredients"
@@ -123,6 +102,7 @@
         android:layout_alignEnd="@+id/tvCookingIngredients"
         android:layout_below="@+id/staticInstructions"
         android:layout_marginTop="19dp"
+        android:layout_marginLeft="10dp"
         android:text="@string/cookingInstructions"
         android:textColor="@color/colorAccent"
         android:textSize="18sp"
