--- a/RecipEase/app/src/main/res/layout/item_recipe.xml
+++ b/RecipEase/app/src/main/res/layout/item_recipe.xml
@@ -20,13 +20,6 @@
             android:cropToPadding="false" />
 
         <ImageView
-            android:id="@+id/ivTransparency"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignBottom="@id/recipeImage"
-            android:background="#aa000000" />
-
-        <ImageView
             android:id = "@+id/heart"
             android:src = "@drawable/new_heart"
             android:layout_width = "80dp"
@@ -48,12 +41,13 @@
         <TextView
             android:id="@+id/title"
             style="@style/TextAppearance.AppCompat.Headline"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/recipeImage"
             android:padding="8dp"
             android:textColor="#FFFFFF"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+            android:theme="@style/ThemeOverlay.AppCompat.Dark"
+            android:background="#aa000000" />
 
         <TextView
             android:layout_width="wrap_content"
