--- a/RecipEase/app/src/main/res/layout/activity_ingredient_selector.xml
+++ b/RecipEase/app/src/main/res/layout/activity_ingredient_selector.xml
@@ -40,6 +40,8 @@
                     android:ems="10"
                     android:id="@+id/actv"
                     android:layout_gravity="center_horizontal"
+                    android:hint="Enter Ingredient Name"
+                    android:textColorHint="@color/colorWhite"
 
                     >
                     <requestFocus/>
